<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btn_9"
        android:layout_width="74dp"
        android:layout_height="66dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="36dp"
        android:backgroundTint="#000000"
        android:onClick="nine"
        android:text="@string/btn_9"
        android:textColor="#22EDD0"
        android:textSize="34sp"
        app:cornerRadius="15sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_6"
        app:layout_constraintEnd_toStartOf="@+id/btn_mul"
        app:layout_constraintStart_toEndOf="@+id/btn_8"
        tools:ignore="UsingOnCLickInXml" />

    <Button
        android:id="@+id/btn_7"
        android:layout_width="74dp"
        android:layout_height="66dp"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="36dp"
        android:backgroundTint="#000000"
        android:onClick="seven"
        android:text="@string/btn_7"
        android:textColor="#22EDD0"
        android:textSize="34sp"
        app:cornerRadius="15sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_4"
        app:layout_constraintEnd_toStartOf="@+id/btn_8"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="UsingOnCLickInXml" />

    <Button
        android:id="@+id/btn_8"
        android:layout_width="74dp"
        android:layout_height="66dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="36dp"
        android:backgroundTint="#000000"
        android:onClick="eight"
        android:text="@string/btn_8"
        android:textColor="#22EDD0"
        android:textSize="34sp"
        app:cornerRadius="15sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_5"
        app:layout_constraintEnd_toStartOf="@+id/btn_9"
        app:layout_constraintStart_toEndOf="@+id/btn_7"
        tools:ignore="UsingOnCLickInXml" />

    <Button
        android:id="@+id/btn_3"
        android:layout_width="74dp"
        android:layout_height="66dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="#000000"
        android:onClick="three"
        android:text="@string/btn_3"
        android:textColor="#22EDD0"
        android:textSize="34sp"
        app:cornerRadius="15sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_point"
        app:layout_constraintEnd_toStartOf="@+id/btn_add"
        app:layout_constraintStart_toEndOf="@+id/btn_2"
        tools:ignore="OnClick,UsingOnCLickInXml" />

    <Button
        android:id="@+id/btn_div"
        android:layout_width="74dp"
        android:layout_height="66dp"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="52dp"
        android:backgroundTint="#000000"
        android:onClick="div"
        android:text="@string/btn_div"
        android:textColor="#22EDD0"
        android:textSize="36sp"
        app:cornerRadius="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="UsingOnCLickInXml" />

    <Button
        android:id="@+id/btn_4"
        android:layout_width="74dp"
        android:layout_height="66dp"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="#000000"
        android:onClick="four"
        android:text="@string/btn_4"
        android:textColor="#22EDD0"
        android:textSize="34sp"
        app:cornerRadius="15sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_1"
        app:layout_constraintEnd_toStartOf="@+id/btn_5"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="OnClick,UsingOnCLickInXml" />

    <Button
        android:id="@+id/btn_0"
        android:layout_width="74dp"
        android:layout_height="66dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="52dp"
        android:backgroundTint="#000000"
        android:onClick="zero"
        android:text="@string/btn_0"
        android:textColor="#22EDD0"
        android:textSize="34sp"
        app:cornerRadius="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_point"
        app:layout_constraintStart_toEndOf="@+id/btn_div"
        tools:ignore="OnClick,UsingOnCLickInXml" />

    <Button
        android:id="@+id/btn_5"
        android:layout_width="74dp"
        android:layout_height="66dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="#000000"
        android:onClick="five"
        android:text="@string/btn_5"
        android:textColor="#22EDD0"
        android:textSize="34sp"
        app:cornerRadius="15sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_2"
        app:layout_constraintEnd_toStartOf="@+id/btn_6"
        app:layout_constraintStart_toEndOf="@+id/btn_4"
        tools:ignore="UsingOnCLickInXml" />

    <Button
        android:id="@+id/btn_6"
        android:layout_width="74dp"
        android:layout_height="66dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="#000000"
        android:onClick="six"
        android:text="@string/btn_6"
        android:textColor="#22EDD0"
        android:textSize="34sp"
        app:cornerRadius="15sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_3"
        app:layout_constraintEnd_toStartOf="@+id/btn_sub"
        app:layout_constraintStart_toEndOf="@+id/btn_5"
        tools:ignore="UsingOnCLickInXml" />

    <Button
        android:id="@+id/btn_point"
        android:layout_width="74dp"
        android:layout_height="66dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="52dp"
        android:backgroundTint="#000000"
        android:onClick="point"
        android:text="@string/btn_point"
        android:textColor="#22EDD0"
        android:textSize="34sp"
        app:cornerRadius="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_res"
        app:layout_constraintStart_toEndOf="@+id/btn_0"
        tools:ignore="TextContrastCheck,TextContrastCheck,UsingOnCLickInXml" />

    <Button
        android:id="@+id/btn_2"
        android:layout_width="74dp"
        android:layout_height="66dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="#000000"
        android:onClick="two"
        android:text="@string/btn_2"
        android:textColor="#22EDD0"
        android:textSize="34sp"
        app:cornerRadius="15sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_0"
        app:layout_constraintEnd_toStartOf="@+id/btn_3"
        app:layout_constraintStart_toEndOf="@+id/btn_1"
        tools:ignore="UsingOnCLickInXml" />

    <Button
        android:id="@+id/btn_sub"
        android:layout_width="74dp"
        android:layout_height="66dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="#000000"
        android:onClick="sub"
        android:text="@string/btn_sub"
        android:textColor="#22EDD0"
        android:textSize="37sp"
        app:cornerRadius="15sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_6"
        tools:ignore="TextContrastCheck, UsingOnCLickInXml" />

    <Button
        android:id="@+id/btn_res"
        android:layout_width="74dp"
        android:layout_height="66dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="52dp"
        android:backgroundTint="#22EDD0"
        android:onClick="res"
        android:text="@string/res"
        android:textColor="#0B0A0A"
        android:textSize="34sp"
        app:cornerRadius="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_point"
        tools:ignore="UsingOnCLickInXml,TextContrastCheck" />

    <Button
        android:id="@+id/btn_mul"
        android:layout_width="74dp"
        android:layout_height="66dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="36dp"
        android:backgroundTint="#000000"
        android:onClick="mul"
        android:text="@string/btn_mul"
        android:textColor="#22EDD0"
        android:textSize="36sp"
        app:cornerRadius="15sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_sub"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_9"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/btn_bk"
        android:layout_width="74dp"
        android:layout_height="66dp"
        android:layout_marginEnd="27dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="#000000"
        android:onClick="back"
        android:text="@string/back"
        android:textColor="#22EDD0"
        android:textScaleX="1"
        android:textSize="38sp"
        app:cornerRadius="15sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_mul"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/btn_clr"
        android:layout_width="268dp"
        android:layout_height="69dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="#000000"
        android:onClick="clear"
        android:text="@string/clear"
        android:textColor="#22EDD0"
        android:textScaleX="1"
        android:textSize="38sp"
        app:cornerRadius="15sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_8"
        app:layout_constraintEnd_toStartOf="@+id/btn_bk"
        app:layout_constraintHorizontal_bias="0.733"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="OnClick,UsingOnClickInXml" />

    <Button
        android:id="@+id/btn_add"
        android:layout_width="74dp"
        android:layout_height="66dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="#000000"
        android:onClick="add"
        android:text="@string/btn_add"
        android:textColor="#22EDD0"
        android:textSize="34sp"
        app:cornerRadius="15sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_res"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_3"
        tools:ignore="TextContrastCheck,TextContrastCheck,UsingOnClickInXml" />

    <Button
        android:id="@+id/btn_1"
        android:layout_width="74dp"
        android:layout_height="66dp"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="#000000"
        android:onClick="one"
        android:text="@string/btn_1"
        android:textColor="#22EDD0"
        android:textSize="34sp"
        app:cornerRadius="15sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_div"
        app:layout_constraintEnd_toStartOf="@+id/btn_2"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="UsingOnClickInXml" />

    <TextView
        android:id="@+id/input"
        android:layout_width="334dp"
        android:layout_height="114dp"
        android:layout_marginTop="60dp"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>